--- a/src/templates/apple/styles-apple.scss
+++ b/src/templates/apple/styles-apple.scss
@@ -180,6 +180,10 @@
             // gap: 15px;
             padding: 15px;
         }
+        #pwa-allow-notitification{
+            transform: scale(0.8);
+            fill: var(--text-color-normal);
+        }
         .dialog-button{
             display: grid;
 
